# alignment-graph

./: .gitignore  LICENSE  README.md  netlify.toml  pyproject.toml  seeds.txt  specter2_embeddings.npy
src/aisafety_pipeline/: __init__.py  clustering.py  config.py  db.py  embeddings.py  export_graph.py  filters.py  labeling.py  oai.py  utils.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/public/: graph.json
ui/src/: App.tsx  FullScreenGraph.tsx  index.css
ui/src/components/: ArxivGraph.tsx  ClusterLegendOverlay.tsx  Graph.tsx  MobilePapers.tsx  MobileView.tsx  PaperDetails.tsx  SearchResultsOverlay.tsx
ui/src/hooks/: useForceConfig.ts  useGraphShortcuts.ts  useMediaQuery.ts  usePaperSummary.ts
ui/src/lib/: colors.ts  graph.ts  summaries.ts  types.ts
